--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
 <%# Write your code here! %>
 <h1>Welcome!</h1>
-<form id=":user_name" name:":user_name">
+<form action="/greet" method="POST">
+</form>
