Automatically backed up by Learn

--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,2 +1,2 @@
 <%# Write your code here! %>
-<form id=":user_name" name:":user_name"></form>
+<h1>Hi <%= params[:user_name] %>, nice to meet you!</h1>
